--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,10 @@ qtdeclarative-opensource-src (5.9.1-5+rpi1) buster-staging; urgency=medium
     or similar crap).
   * Further fixes to clean target.
 
- -- Raspbian forward porter <root@raspbian.org>  Tue, 05 Sep 2017 11:57:04 +0000
+  [Changed introduced in 5.9.1-5+rpi by Peter Michael Green]
+  * Extend symbols file hack.
+
+ -- Peter Michal Green <plugwash@raspbian.org>  Wed, 06 Sep 2017 20:38:41 +0000
 
 qtdeclarative-opensource-src (5.9.1-5) unstable; urgency=medium
 
