--- a/debian/changelog
+++ b/debian/changelog
@@ -5,8 +5,9 @@ qtdeclarative-opensource-src (5.14.2+dfsg-3+rpi1) bullseye-staging; urgency=medi
 
   [changes introduced in 5.14.2+dfsg-3+rpi1 by Peter Michael Green]
   * Mark a gcc 10 only symbol as optional.
+  * Disable testsuite.
 
- -- Peter Michael Green <plugwash@raspbian.org>  Sun, 02 Aug 2020 01:10:42 +0000
+ -- Peter Michael Green <plugwash@raspbian.org>  Sun, 02 Aug 2020 08:41:48 +0000
 
 qtdeclarative-opensource-src (5.14.2+dfsg-3) unstable; urgency=medium
 
